--- a/layouts/partials/custom_body.html
+++ b/layouts/partials/custom_body.html
@@ -4,5 +4,5 @@
 
 
 {{ if .Site.Params.nolytics.enabled }}
-<img src="{{ .Site.Params.nolytics.worker_url }}?path={{ .URL }}&name={{ .Title }}" alt="">
+<img src="{{ .Site.Params.nolytics.worker_url }}?path={{ .RelPermalink }}&name={{ .Title }}" alt="">
 {{ end }}
