feat: change link colors via config.toml

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -1,3 +1,11 @@
 <!-- A partial to be overwritten by the user.
   Simply place a custom_head.html into
   your local /layouts/partials-directory -->
+
+{{ if .Site.Params.theme.enabled }}
+<style>
+  a {
+    color: {{ .Site.Params.theme.link_color }};
+  }
+</style>
+{{ end }}
