--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,7 +3,7 @@
   {{ if .Data.Singular }}
   <h3 style="margin-bottom:0">Filtering for "{{ .Title }}"</h3>
   <small>
-    <a href="{{ "/blog" | relURL }}">Remove filter</a>
+    <a href="{{ " /blog" | relURL }}">Remove filter</a>
   </small>
   {{ end }}
   <ul class="blog-posts">
@@ -26,13 +26,25 @@
   </ul>
   {{ if .Data.Singular }}
   {{else}}
-    <small>
-      <div>
-        {{ range .Site.Taxonomies.tags }}
-        <a href="{{ .Page.Permalink }}">#{{ .Page.Title }}</a>&nbsp;
+  <small>
+    <div>
+      {{ $category := .Page.Path }}
+      
+      {{ range .Site.Taxonomies.tags }}
+        {{ $showTag := false }}
+        {{ range .Pages }}
+        
+          {{ if in .Params.Categories $category }}
+            {{ $showTag = true }}
+          {{ end }}
         {{ end }}
-      </div>
-    </small>
-    {{ end }}
+
+        {{ if $showTag }}
+          <a href="{{ .Page.Permalink }}">#{{ .Page.Title }}</a>&nbsp;
+        {{ end }}
+      {{ end }}
+    </div>
+  </small>
+  {{ end }}
 </content>
 {{ end }}
