style: monospace font

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -1,6 +1,6 @@
 <style>
   body {
-    font-family: Verdana, sans-serif;
+    font-family: monospace, sans-serif;
     margin: auto;
     padding: 20px;
     max-width: 720px;
@@ -76,6 +76,7 @@
   pre code {
     color: #222;
     display: block;
+    border-left: 3px solid #f36d33;
     padding: 20px;
     white-space: pre-wrap;
     font-size: 14px;
