--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -1,9 +1,9 @@
 <style>
   body {
-    font-family: monospace, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: auto;
     padding: 20px;
-    max-width: 720px;
+    max-width: 840px;
     text-align: left;
     background-color: #fff;
     word-wrap: break-word;
