feat: add stats page layout

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -55,6 +55,9 @@
     </div>
   </small>
   {{ end }}
+  {{ if .GetPage "stats" }}
+    <a href="{{ .Permalink }}/stats">Click here to see statistics or filter by keywords</a>
+  {{ end }}
   {{ end }}
 </content>
 {{ end }}
