--- a/layouts/_default/grid.html
+++ b/layouts/_default/grid.html
@@ -30,10 +30,11 @@
   <ul class="blog-posts">
     {{ $pages := .Pages }}
     {{ if .Site.Params.pagination.enabled }}
-      {{ $pages = (.Paginator .Site.Params.pagination.limit).Pages }}
+      {{ $pages = (.Paginator .Site.Params.pagination.grid_limit).Pages }}
     {{ end }}
 
     {{ range $pages }}
+    {{ $links := .Params.links }}
     <li>
       <span>
         <i>
@@ -43,6 +44,13 @@
         </i>
       </span>
       <a href="{{ .Permalink }}">{{ .Title }}</a>
+      {{ if $links.verification }}
+      <a href="{{ $links.verification }}" target="_blank" style="margin-left: 1.5%;">
+        <svg width="24" height="24" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+          <path fill="#1DA1F2" d="M8.38 14.72h-.71L6 13H3.53L3 12.5v-2.42L1.31 8.36v-.71L3 5.93V3.5l.53-.5H6l1.67-1.71h.71L10.1 3h2.43l.5.49v2.44l1.71 1.72v.71L13 10.08v2.42l-.5.5h-2.4zm-1.65-4.24h.71l3.77-3.77L10.5 6L7.09 9.42L5.71 8.04L5 8.75z"/>
+        </svg>
+      </a>
+    {{ end}}
     </li>
     {{ else }}
     <li>
@@ -54,58 +62,73 @@
   <div class="grid">
     {{ $pages := .Pages }}
     {{ if .Site.Params.pagination.enabled }}
-      {{ $pages = (.Paginator .Site.Params.pagination.limit).Pages }}
+      {{ $pages = (.Paginator .Site.Params.pagination.grid_limit).Pages }}
     {{ end }}
 
     {{ range $pages }}
     <div class="grid-item">
-      <a href="{{ .Permalink }}">
-        <div class="card">
-          {{ $cover_url := .Params.links.cover }}
+      <div class="card">
+        {{ $cover_url := .Params.links.cover }}
+        {{ $links := .Params.links }}
 
+        <a href="{{ .Permalink }}">
           <img class="card-img" src="{{ $cover_url }}" alt="Avatar">
-          <div class="card-container">
-            <a href="{{ .Permalink }}">{{ .Title }}</a>
-            <div style="flex-grow: 1;">
-              <p>{{.Description}}</p>
-            </div>
-            <small>
-              <div>
-                {{ range .Keywords }}
-                    <a>#{{ . }}</a>&nbsp;
-                {{ end }}
-              </div>
-            </small>
-          </div>
-
-          {{ $links := .Params.links }}
-
-          {{ if $links }}
-            <div class="card-links">
-              {{ if $links.homepage }}
-                <a href="{{ $links.homepage }}" target="_blank" title="Visit Homepage">
-                  <svg width="24" height="24" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                    <path fill="#000000" d="M26 28H6a2.003 2.003 0 0 1-2-2V6a2.003 2.003 0 0 1 2-2h10v2H6v20h20V16h2v10a2.003 2.003 0 0 1-2 2"/>
-                    <path fill="#000000" d="M20 2v2h6.586L18 12.586L19.414 14L28 5.414V12h2V2z"/>
-                </svg>
-                </a>
-              {{ end }}
-
-              {{ if $links.github }}
-                <a href="{{ $links.github }}" target="_blank" title="Browse source-code">
-                  <svg width="24" height="24" viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg">
-                    <g fill="#181616">
-                        <path fill-rule="evenodd" d="M64 5.103c-33.347 0-60.388 27.035-60.388 60.388c0 26.682 17.303 49.317 41.297 57.303c3.017.56 4.125-1.31 4.125-2.905c0-1.44-.056-6.197-.082-11.243c-16.8 3.653-20.345-7.125-20.345-7.125c-2.747-6.98-6.705-8.836-6.705-8.836c-5.48-3.748.413-3.67.413-3.67c6.063.425 9.257 6.223 9.257 6.223c5.386 9.23 14.127 6.562 17.573 5.02c.542-3.903 2.107-6.568 3.834-8.076c-13.413-1.525-27.514-6.704-27.514-29.843c0-6.593 2.36-11.98 6.223-16.21c-.628-1.52-2.695-7.662.584-15.98c0 0 5.07-1.623 16.61 6.19C53.7 35 58.867 34.327 64 34.304c5.13.023 10.3.694 15.127 2.033c11.526-7.813 16.59-6.19 16.59-6.19c3.287 8.317 1.22 14.46.593 15.98c3.872 4.23 6.215 9.617 6.215 16.21c0 23.194-14.127 28.3-27.574 29.796c2.167 1.874 4.097 5.55 4.097 11.183c0 8.08-.07 14.583-.07 16.572c0 1.607 1.088 3.49 4.148 2.897c23.98-7.994 41.263-30.622 41.263-57.294C124.388 32.14 97.35 5.104 64 5.104z" clip-rule="evenodd"/>
-                        <path d="M26.484 91.806c-.133.3-.605.39-1.035.185c-.44-.196-.685-.605-.543-.906c.13-.31.603-.395 1.04-.188c.44.197.69.61.537.91zm2.446 2.729c-.287.267-.85.143-1.232-.28c-.396-.42-.47-.983-.177-1.254c.298-.266.844-.14 1.24.28c.394.426.472.984.17 1.255zm2.382 3.477c-.37.258-.976.017-1.35-.52c-.37-.538-.37-1.183.01-1.44c.373-.258.97-.025 1.35.507c.368.545.368 1.19-.01 1.452zm3.261 3.361c-.33.365-1.036.267-1.552-.23c-.527-.487-.674-1.18-.343-1.544c.336-.366 1.045-.264 1.564.23c.527.486.686 1.18.333 1.543zm4.5 1.951c-.147.473-.825.688-1.51.486c-.683-.207-1.13-.76-.99-1.238c.14-.477.823-.7 1.512-.485c.683.206 1.13.756.988 1.237m4.943.361c.017.498-.563.91-1.28.92c-.723.017-1.308-.387-1.315-.877c0-.503.568-.91 1.29-.924c.717-.013 1.306.387 1.306.88zm4.598-.782c.086.485-.413.984-1.126 1.117c-.7.13-1.35-.172-1.44-.653c-.086-.498.422-.997 1.122-1.126c.714-.123 1.354.17 1.444.663zm0 0"/>
-                    </g>
-                  </svg>
-                </a>
-              {{ end }}
-            </div>
-          {{ end }}
         </a>
-      </div>
-      
+        <div class="card-container">
+          <div class="card-container-header">
+            <a href="{{ .Permalink }}">{{ .Title }}</a>
+            {{ if $links.verification }}
+              <a href="{{ $links.verification }}" target="_blank">
+                <svg width="24" height="24" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+                  <path fill="#1DA1F2" d="M8.38 14.72h-.71L6 13H3.53L3 12.5v-2.42L1.31 8.36v-.71L3 5.93V3.5l.53-.5H6l1.67-1.71h.71L10.1 3h2.43l.5.49v2.44l1.71 1.72v.71L13 10.08v2.42l-.5.5h-2.4zm-1.65-4.24h.71l3.77-3.77L10.5 6L7.09 9.42L5.71 8.04L5 8.75z"/>
+                </svg>
+              </a>
+            {{ end}}
+          </div>
+          <div style="flex-grow: 1;">
+            <p>{{.Description}}</p>
+          </div>
+          <small>
+            <div>
+              {{ range .Keywords }}
+                  <a>#{{ . }}</a>&nbsp;
+              {{ end }}
+            </div>
+          </small>
+        </div>
+
+        {{ if $links }}
+          <div class="card-links">
+            {{ if $links.homepage }}
+              <a href="{{ $links.homepage }}" target="_blank" title="Visit Homepage">
+                <svg width="24" height="24" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                  <path fill="#000000" d="M26 28H6a2.003 2.003 0 0 1-2-2V6a2.003 2.003 0 0 1 2-2h10v2H6v20h20V16h2v10a2.003 2.003 0 0 1-2 2"/>
+                  <path fill="#000000" d="M20 2v2h6.586L18 12.586L19.414 14L28 5.414V12h2V2z"/>
+              </svg>
+              </a>
+            {{ end }}
+
+            {{ if $links.github }}
+              <a href="{{ $links.github }}" target="_blank" title="Browse source-code">
+                <svg width="24" height="24" viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg">
+                  <g fill="#181616">
+                      <path fill-rule="evenodd" d="M64 5.103c-33.347 0-60.388 27.035-60.388 60.388c0 26.682 17.303 49.317 41.297 57.303c3.017.56 4.125-1.31 4.125-2.905c0-1.44-.056-6.197-.082-11.243c-16.8 3.653-20.345-7.125-20.345-7.125c-2.747-6.98-6.705-8.836-6.705-8.836c-5.48-3.748.413-3.67.413-3.67c6.063.425 9.257 6.223 9.257 6.223c5.386 9.23 14.127 6.562 17.573 5.02c.542-3.903 2.107-6.568 3.834-8.076c-13.413-1.525-27.514-6.704-27.514-29.843c0-6.593 2.36-11.98 6.223-16.21c-.628-1.52-2.695-7.662.584-15.98c0 0 5.07-1.623 16.61 6.19C53.7 35 58.867 34.327 64 34.304c5.13.023 10.3.694 15.127 2.033c11.526-7.813 16.59-6.19 16.59-6.19c3.287 8.317 1.22 14.46.593 15.98c3.872 4.23 6.215 9.617 6.215 16.21c0 23.194-14.127 28.3-27.574 29.796c2.167 1.874 4.097 5.55 4.097 11.183c0 8.08-.07 14.583-.07 16.572c0 1.607 1.088 3.49 4.148 2.897c23.98-7.994 41.263-30.622 41.263-57.294C124.388 32.14 97.35 5.104 64 5.104z" clip-rule="evenodd"/>
+                      <path d="M26.484 91.806c-.133.3-.605.39-1.035.185c-.44-.196-.685-.605-.543-.906c.13-.31.603-.395 1.04-.188c.44.197.69.61.537.91zm2.446 2.729c-.287.267-.85.143-1.232-.28c-.396-.42-.47-.983-.177-1.254c.298-.266.844-.14 1.24.28c.394.426.472.984.17 1.255zm2.382 3.477c-.37.258-.976.017-1.35-.52c-.37-.538-.37-1.183.01-1.44c.373-.258.97-.025 1.35.507c.368.545.368 1.19-.01 1.452zm3.261 3.361c-.33.365-1.036.267-1.552-.23c-.527-.487-.674-1.18-.343-1.544c.336-.366 1.045-.264 1.564.23c.527.486.686 1.18.333 1.543zm4.5 1.951c-.147.473-.825.688-1.51.486c-.683-.207-1.13-.76-.99-1.238c.14-.477.823-.7 1.512-.485c.683.206 1.13.756.988 1.237m4.943.361c.017.498-.563.91-1.28.92c-.723.017-1.308-.387-1.315-.877c0-.503.568-.91 1.29-.924c.717-.013 1.306.387 1.306.88zm4.598-.782c.086.485-.413.984-1.126 1.117c-.7.13-1.35-.172-1.44-.653c-.086-.498.422-.997 1.122-1.126c.714-.123 1.354.17 1.444.663zm0 0"/>
+                  </g>
+                </svg>
+              </a>
+            {{ end }}
+            {{ if $links.company }}
+            <a href="{{ $links.company }}" target="_blank" title="Visit company website">
+              <svg width="24" height="24" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8 8h2v4H8zm0 6h2v4H8zm6-6h2v4h-2zm0 6h2v4h-2zm-6 6h2v4H8zm6 0h2v4h-2z"/>
+                <path d="M30 14a2 2 0 0 0-2-2h-6V4a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v26h28ZM4 4h16v24H4Zm18 24V14h6v14Z"/>
+            </svg>
+            </a>
+            {{ end }}
+          </div>
+        {{ end }}
+    </div>
     </div>
     {{ else }}
     <li>
