--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -174,6 +174,18 @@
     height: 100%;
   }
 
+  .card-container-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .card-container-header>a {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+
   .card {
     display: flex;
     flex-direction: column;
