fix(goat-counter): broken initialize script

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -11,7 +11,7 @@
 
 {{ if and .Site.Params.goat_counter.enabled hugo.IsProduction }}
   <script
-    data-goat_counter="{{ .Site.Params.goat_counter.proxy_url }}/count"
+    data-goatcounter="{{ .Site.Params.goat_counter.proxy_url }}/count"
     async src="{{ .Site.Params.goat_counter.proxy_url }}/count.js">
   </script>
 {{ end }}
