fix(gallery): remove static max-width

--- a/layouts/shortcodes/gallery.html
+++ b/layouts/shortcodes/gallery.html
@@ -28,7 +28,7 @@
             <figure class="row flex-center"
                 style="display: block; margin-left: auto; margin-right: auto; overflow: hidden;">
                 <img src="{{ . }}" {{ with $alt }}alt="{{ . }}" {{ end }}
-                    style="display: block; margin-left: auto; margin-right: auto; max-width: 100%;">
+                    style="display: block; margin-left: auto; margin-right: auto">
                 {{ with $cap -}}
                 <figcaption style="text-align: center;">
                     <p>{{ . }}</p>
